<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:id="@+id/root_element">

    <ImageView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/card_credite"
        android:src="@drawable/login_card"

        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/signin"
        android:clickable="false"
        android:text="@string/signin"
        android:textColor="@android:color/black"
        android:textSize="25sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintHorizontal_bias="0.10"
        >
    </TextView>

    <ImageView
        android:id="@+id/login_card1"
        android:background="@color/card_credite"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/login_card1"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="0.12"
        app:layout_constraintHorizontal_bias="0.08"
        />

    <TextView
        android:id="@+id/cards"
        android:clickable="false"
        android:text="@string/cards"
        android:textColor="@android:color/black"
        android:textSize="25sp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:layout_constraintHorizontal_bias="0.27"
        >
    </TextView>

    <TextView
        android:id="@+id/description"
        android:clickable="false"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textSize="18sp"

        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.24"
        >
    </TextView>


    <TextView
        android:id="@+id/description2"
        android:clickable="false"
        android:text="@string/description2"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        android:layout_margin="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.24"
        >
    </TextView>

    <TextView
        android:id="@+id/button_new_account"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#fafafa"
        android:text="@string/button_new_account"
        android:textColor="#227be0"
        android:textSize="16sp"

        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">
    </TextView>

    <View
        android:id="@+id/bara_jos"
        android:background="#ebebeb"

        android:layout_width="wrap_content"
        android:layout_height="50dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        />

    <TextView
    android:id="@+id/btnSignIn"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:background="#ebebeb"
    android:text="@string/sign"
    android:textColor="@android:color/black"
    android:textSize="16sp"

    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.95"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.98">
</TextView>

    <TextView
        android:id="@+id/btnRegister"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="80dp"
        android:layout_height="wrap_content"

        android:background="#ebebeb"
        android:text="@string/register"
        android:textColor="@android:color/black"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>