<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactusActivity"
    >

    <ImageView
        android:id="@+id/login_card"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@color/card_credite"
        android:src="@drawable/login_card"

        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <TextView
        android:id="@+id/signin"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/Setting"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintHorizontal_bias="0.15"
        >
    </TextView>

    <View
        android:id="@+id/bara_numar"
        android:background="#227be0"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.205"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/bara_numar1"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/phone"
        android:textColor="@android:color/black"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207">
    </TextView>

    <TextView
        android:id="@+id/nr_mobile"
        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:autoLink="phone"
        android:text="@string/phone1"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26">
    </TextView>

    <ImageButton
        android:id="@+id/img1"
        android:src="@drawable/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255"
        app:layout_constraintHorizontal_bias="0.1"/>

    <View
        android:id="@+id/bara_sp1"
        android:background="#000000"
        android:layout_width="wrap_content"
        android:layout_height="1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.306"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/img2"
        android:src="@drawable/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.335"
        app:layout_constraintHorizontal_bias="0.1"/>


    <TextView
        android:id="@+id/nr_mobile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"

        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:text="@string/phone2"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.359"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342">

    </TextView>

    <View
        android:id="@+id/bara_sp2"
        android:background="#000000"
        android:layout_width="wrap_content"
        android:layout_height="1dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.381"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/img3"
        android:src="@drawable/telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        app:layout_constraintHorizontal_bias="0.1"/>

    <TextView
        android:id="@+id/nr_mobile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"

        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:text="@string/phone3"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

    </TextView>

    <View
        android:id="@+id/bara_email"
        android:background="#227be0"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.466"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/bara_email1"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/email1"
        android:textColor="@android:color/black"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">
    </TextView>

    <ImageButton
        android:id="@+id/img4"
        android:src="@drawable/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52"
        app:layout_constraintHorizontal_bias="0.089"/>

    <TextView
        android:id="@+id/email_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"

        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:text="@string/email2"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515">

    </TextView>

    <View
        android:id="@+id/bara_sp3"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <ImageButton
        android:id="@+id/img5"
        android:src="@drawable/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintHorizontal_bias="0.089"/>

    <TextView
        android:id="@+id/email_contact2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"

        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:text="@string/email3"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595">

    </TextView>

    <View
        android:id="@+id/bara_web"
        android:background="#227be0"
        android:layout_width="wrap_content"
        android:layout_height="25dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.65"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageButton
        android:id="@+id/img6"
        android:src="@drawable/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71"
        app:layout_constraintHorizontal_bias="0.08"/>

    <TextView
        android:id="@+id/web_contact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"

        android:linksClickable="true"
        android:textColorLink="@android:color/black"
        android:text="@string/web_contact"
        android:textColor="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705">

    </TextView>

    <TextView
        android:id="@+id/bara_web1"
        android:clickable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/web"
        android:textColor="@android:color/black"
        android:textSize="13sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">
    </TextView>

    <View
        android:id="@+id/bara_sp4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <ImageButton
        android:id="@+id/img7"
        android:src="@drawable/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/buton_1"

        android:background="#fafafa"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.795"
        app:layout_constraintHorizontal_bias="0.085"/>

    <TextView
        android:id="@+id/facebook_contact1"
        android:layout_width="268dp"
        android:layout_height="38dp"
        android:autoLink="web"

        android:linksClickable="true"
        android:text="@string/facebook_contact"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="15sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.788">

    </TextView>

    <View
        android:id="@+id/bara_sp5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#000000"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />




</androidx.constraintlayout.widget.ConstraintLayout>